flux/apps/_bases/shopkeeper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopkeeper

spec:
  selector:
    matchLabels:
      app: shopkeeper

  template:
    metadata:
      labels:
        app: shopkeeper

    spec:
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database

      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: shopkeeper
          image: ghcr.io/nint8835/shopkeeper
          args: [ "start" ]

          volumeMounts:
            - mountPath: /data
              name: database

          ports:
            - containerPort: 8000
              name: http
              protocol: TCP

          livenessProbe:
            httpGet:
              path: /
              port: http

          readinessProbe:
            httpGet:
              path: /
              port: http

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "256Mi"
